[package]
name = "procfd"
authors = ["Vitaly Shupak <vitaly.shupak@deshaw.com>"]
description = "procfd is a simple, fast, and user-friendly alternative to lsof on Linux to list process file descriptors"
readme = "README.md"
homepage = "https://github.com/deshaw/procfd"
repository = "https://github.com/deshaw/procfd"
license = "BSD-3-Clause"
keywords = ["lsof", "lsfd", "procfs", "open-files"]
categories = ["command-line-utilities", "os::linux-apis", "filesystem"]
version = "1.1.0"
edition = "2021"

[dependencies]
procfs = "0.17.0"
clap = { version = "4.5.35", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
dns-lookup = "2.0.4"
prettytable-rs = "0.10.0"
netlink-packet-sock-diag = "0.4.2"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.7"
rayon = "1.10.0"
dashmap = "6.1.0"
itertools = "0.14.0"
eyre = "0.6.12"
xattr = "1.5.0"
regex = "1.11.1"
uzers = "0.12.1"
